package ua.khpi.oop.lab07.contracts;

public interface Payable {
    String pay(double amount);
}