package ua.khpi.oop.lab07.contracts;

public interface Reservable {
    String reserve(String customerName);
}